syntax = "proto3";

option java_multiple_files = true;
option java_package = "hello.world";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package proto;

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request payload for a hello-like message
message HelloRequest {
  // Name of the person who said hello
  string name = 1;

  // Age of the person who said hello (optional)
  int32 age = 10;
}

// The response payload for a hello-like message
message HelloReply {
  // Raw content of the response that was returned back
  string message = 1;

  // Server intent behind the response
  REPLY_INTENT intent = 2;

  enum REPLY_INTENT {
    WELCOME = 0;
    QUERY = 1;
    ASK_OUT = 2;
    GOOD_WISH = 3;
    REJECT = 4;
  }
}
